--- a/TTTEEAAA/aboutus.html
+++ b/TTTEEAAA/aboutus.html
@@ -89,7 +89,7 @@
                     <img src="img/1202.jpg" class="img-fluid">
                     <div class="mask">
                       <h2>資管二乙 林芝歡</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                        <p>這次的Demo讓我有體驗到團隊合作的重要性，大家沒日沒夜的討論，只希望可以達到我們最好的境界，從中獲得很多後端的知識，就算遇到很多挫折，我們仍然一起完成了，謝謝隊友們的互相照料，我獲益良多，希望大家期末都可以過。</p>
                         <a href="https://www.instagram.com/z.h_lin_880925/?hl=zh-tw" class="info">關於我</a>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <img src="img/1210.jpg" class="img-fluid" >
                     <div class="mask">
                        <h2>資管二乙 洪育嘉</h2>
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+                        <p>這次的網程可以說是我上大學以來，可以說是最大的挑戰，因為不斷的測試及錯誤，使我對程式非常的懼怕，不過我只能說與隊友的溝通與合作非常的重要，不僅直接關係到組員們到情緒，更間接的影響到邏輯的思緒。不過從錯中學習也是這次深刻的回憶了，感謝這次隊友們的努力，希望大家都能順利通過。</p>
                         <a href="https://www.instagram.com/chia_0110/?hl=zh-tw" class="info">關於我</a>
                     </div>
                 </div>
